--- a/.github/workflows/update-transport.yml
+++ b/.github/workflows/update-transport.yml
@@ -12,13 +12,13 @@ jobs:
 
       - name: Update Transport Policy Action
         run: |
-          content=$(cat ${{ github.workspace }}/policies/transport/protocol.json | jq)
-          update_status=$(curl -o /dev/null -s -w "%{http_code}" --location --request PUT "${{ vars.baseURL }}/policyActions/253cae74-0a0e-4f52-95ba-84f7c3b067ce" -H "Authorization: ${{ secrets.basicAuth }}" -H "Content-Type: application/json" -d "$content")
+          content=$(cat ${{ github.workspace }}/analysts-studio-petstore/Policies/transport/protocol.json | jq)
+          update_status=$(curl -o /dev/null -s -w "%{http_code}" --location --request PUT "${{ vars.baseURL }}/policyActions/83e59dc2-9319-40ad-84ab-62ff893984e4" -H "Authorization: ${{ secrets.basicAuth }}" -H "Content-Type: application/json" -d '{"policyAction":$content}')
           
           if [ "${update_status}" == "200" ]; then
-            echo "API updated successfully."
+            echo "Transport policy action updated successfully."
           else
-            echo "Unable to update API."
+            echo "Unable to update Transport policy action."
           fi
 
 
