Update policy action

--- a/.github/workflows/update-routing.yml
+++ b/.github/workflows/update-routing.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Update Routing Policy Action
         run: |
           content=$(cat ${{ github.workspace }}/analysts-studio-petstore/Policies/routing/routing.json | jq)
-          update_status=$(curl -o /dev/null -s -w "%{http_code}" --location --request PUT "${{ vars.baseURL }}/policyActions/4ac5f262-0776-480e-b94d-1887c324840c" -H "Authorization: ${{ secrets.basicAuth }}" -H "Content-Type: application/json" -d '{"policyAction":$content}')
+          update_status=$(curl -o /dev/null -s -w "%{http_code}" --location --request PUT "${{ vars.baseURL }}/policyActions/4ac5f262-0776-480e-b94d-1887c324840c" -H "Authorization: ${{ secrets.basicAuth }}" -H "Content-Type: application/json" -d "{\"policyAction\": $content}")
           
           if [ "${update_status}" == "200" ]; then
             echo "Routing policy action updated successfully."
