--- a/.github/workflows/update-iam.yml
+++ b/.github/workflows/update-iam.yml
@@ -1,11 +1,11 @@
-name: Create IAM Policy Action
+name: Update IAM Policy Action
 
 on:
   workflow_dispatch:
 
   push:
     paths:
-      - "analysts-studio-petstore/Policies/identify & access/iam.json"
+      - "analysts-studio-petstore/Policies/identify & access (1)/iam.json"
 
 jobs:
   create-iam-policy-action:
@@ -14,27 +14,13 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Create IAM Policy Action
-        id: createIAM
+      - name: Update IAM Policy Action
         run: |
-          content=$(cat "${{ github.workspace }}/analysts-studio-petstore/Policies/identify & access/iam.json" | jq)
-          create_status_code=$(curl -o ./response.json -s -w "%{http_code}" --location --request POST "${{ vars.baseURL }}/policyActions" -H "Authorization: ${{ secrets.basicAuth }}" -H "Content-Type: application/json" -d "{\"policyAction\": $content}")
-          
-          if [ "${create_status_code}" == "201" ]; then
-            echo "IAM Policy Action created successfully."
-          else
-            echo "Unable to create IAM Policy Action."
-          fi
-          
-          policyActionId=`jq ."policyAction.id" response.json`
-          echo "policyActionId=$policyActionId" >> $GITHUB_OUTPUT
-
-      - name: Add IAM to Policy
-        run: |
-          update_status=$(curl -o /dev/null -s -w "%{http_code}" --location --request PUT "${{ vars.baseURL }}/policies/dea0248f-edb1-48d2-8d0d-8374c9f99761" -H "Authorization: ${{ secrets.basicAuth }}" -H "Content-Type: application/json" -d '{"policy":{"names":[{"value":"Default Policy for API analysts-studio-petstore","locale":"English"}],"descriptions":[{"value":"","locale":"English"}],"scope":{"scopeConditions":[]},"policyEnforcements":[{"enforcements":[{"enforcementObjectId":"4ac5f262-0776-480e-b94d-1887c324840c","order":"0"}],"stageKey":"routing"},{"enforcements":[{"enforcementObjectId": ${{ steps.createIAM.outputs.policyActionId }} ,"order":"0"}],"stageKey":"IAM"},{"enforcements":[{"enforcementObjectId":"83e59dc2-9319-40ad-84ab-62ff893984e4","order":"0"}],"stageKey":"transport"}],"policyScope":"SERVICE","systemPolicy":false,"global":false,"active":false}}')
+          content=$(cat ${{ github.workspace }}/analysts-studio-petstore/Policies/identify & access (1)/iam.json | jq)
+          update_status=$(curl -o /dev/null -s -w "%{http_code}" --location --request PUT "${{ vars.baseURL }}/policyActions/509a4b61-9fa2-49cf-b617-62eccfcd5954" -H "Authorization: ${{ secrets.basicAuth }}" -H "Content-Type: application/json" -d "{\"policyAction\": $content}")
           
           if [ "${update_status}" == "200" ]; then
-            echo "Policy updated successfully."
+            echo "IAM policy action updated successfully."
           else
-            echo "Unable to update Policy."
+            echo "Unable to update IAM policy action."
           fi
