--- a/.github/workflows/update-routing.yml
+++ b/.github/workflows/update-routing.yml
@@ -5,7 +5,7 @@ on:
 
   push:
     paths:
-      - "analysts-studio-petstore/Policies/routing/routing.json"
+      - "analysts-studio-petstore/Policies/routing (1)/routing.json"
 
 jobs:
   update-routing-policy-action:
@@ -16,7 +16,7 @@ jobs:
 
       - name: Update Routing Policy Action
         run: |
-          content=$(cat ${{ github.workspace }}/analysts-studio-petstore/Policies/routing/routing.json | jq)
+          content=$(cat ${{ github.workspace }}/analysts-studio-petstore/Policies/routing (1)/routing.json | jq)
           update_status=$(curl -o /dev/null -s -w "%{http_code}" --location --request PUT "${{ vars.baseURL }}/policyActions/4ac5f262-0776-480e-b94d-1887c324840c" -H "Authorization: ${{ secrets.basicAuth }}" -H "Content-Type: application/json" -d "{\"policyAction\": $content}")
           
           if [ "${update_status}" == "200" ]; then
