--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -8,7 +8,7 @@ on:
       - "analysts-studio-petstore/APIs/petstore.json"
 
 jobs:
-  update-api:
+  update-and-promote-api:
     runs-on: [analysts-demo]
     steps:
       - name: Checkout Code
@@ -50,7 +50,8 @@ jobs:
 
       - name: Run fuctional tests
         run: |
-          cd .github/tests
+          cd ${{github.workspace}}/.github/tests
+          pwd
           k6 run functionalTest.js
 
       - name: Report results
