--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -51,21 +51,14 @@ jobs:
       - name: Run fuctional tests
         run: |
           cd ${{github.workspace}}/.github/tests
-          pwd
           k6 run functionalTest.js
-
-      - name: Report results
-        if: always()
-        run: |
-          mkdir results 
-          cp tests/summary-functional.html results
 
       - name: Upload Dev functional test results
         if: always()
         uses: actions/upload-artifact@v3
         with:
           name: Dev-functional-test-results
-          path: "results/*"
+          path: "${{github.workspace}}/.github/tests/summary-functional.html"
 
       - name: Promote to QA
         run: |
