Added overwrite to Promotion

--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -62,7 +62,7 @@ jobs:
 
       - name: Promote to QA
         run: |
-          curl -X POST -d '{"description": "Promotion Set to promote to QA environment","name":"PromoteToTest","destinationStages": ["f43f0fba-2ecd-4846-855e-b0de75f57eb0"],"promotedAssets": {"api": ["72dc6ea1-47e9-43a6-a544-3c4d9316285b"]}}' -H "Content-Type: application/json" -H "Authorization: ${{ secrets.basicAuth }}" ${{ vars.baseURL }}/promotion
+          curl -X POST -d '{"description": "Promotion Set to promote to QA environment","name":"PromoteToTest","destinationStages": ["f43f0fba-2ecd-4846-855e-b0de75f57eb0"],"promotedAssets": {"api": ["72dc6ea1-47e9-43a6-a544-3c4d9316285b"]}}' -H "Content-Type: application/json" -H "Authorization: ${{ secrets.basicAuth }}" ${{ vars.baseURL }}/promotion?overwrite=true
 
   qa_suite:
     runs-on: [analysts-demo]
@@ -92,4 +92,4 @@ jobs:
 
       - name: Promote to Prod Gateway
         run: |
-          curl -X POST -d '{"description": "Promotion Set to promote to Prod environment","name":"PromoteToProd","destinationStages": ["71cf4ef0-db64-4dc1-a921-c212d4f3fc09"],"promotedAssets": {"api": ["72dc6ea1-47e9-43a6-a544-3c4d9316285b"]}}' -H "Content-Type: application/json" -H "Authorization: Basic YW5hbHlzdHNfZGVtbzp4d2VARFdKMHdjaDZxcmcqd3hx" https://demofreeforever.apigw-aw-eu.webmethods.io/rest/apigateway/promotion
+          curl -X POST -d '{"description": "Promotion Set to promote to Prod environment","name":"PromoteToProd","destinationStages": ["71cf4ef0-db64-4dc1-a921-c212d4f3fc09"],"promotedAssets": {"api": ["72dc6ea1-47e9-43a6-a544-3c4d9316285b"]}}' -H "Content-Type: application/json" -H "Authorization: Basic YW5hbHlzdHNfZGVtbzp4d2VARFdKMHdjaDZxcmcqd3hx" https://demofreeforever.apigw-aw-eu.webmethods.io/rest/apigateway/promotion?overwrite=true
